.ref-BSD-1/pi/y.output

state 0
	$accept : _goal $end 

	YPROG  shift 3
	.  error


state 1
	$accept :  goal_$end 

	$end  accept
	.  error


state 2
	goal :  prog_hedr_decls procs block . 

	.  reduce 7


state 3
	prog_hedr :  YPROG_YID ( id_list ) ; 
	prog_hedr :  YPROG_error 

	error  shift 6
	YID  shift 5
	.  error


state 4
	goal :  prog_hedr decls_procs block . 
	decls :  decls_decl 
	decls :  decls_error 

	error  shift 9
	YBEGIN  reduce 27
	YCONST  shift 15
	YFUNCTION  reduce 27
	YLABEL  shift 14
	YPROCEDURE  reduce 27
	YTYPE  shift 16
	YVAR  shift 17
	.  error


state 5
	prog_hedr :  YPROG YID_( id_list ) ; 

	(  shift 18
	.  error


state 6
	prog_hedr :  YPROG error_

	.  reduce 3


state 7
	goal :  prog_hedr decls procs_block . 
	procs :  procs_proc 

	YBEGIN  shift 21
	YFUNCTION  shift 26
	YPROCEDURE  shift 25
	.  error


state 8
	decls :  decls decl_

	.  reduce 5


state 9
	decls :  decls error_

	.  reduce 6


state 10
	decl :  labels_

	.  reduce 8


11: shift/reduce conflict (shift 28, red'n 9) on error
state 11
	decl :  const_decl_
	const_decl :  const_decl_YID = const ; 
	const_decl :  const_decl_error 

	error  shift 28
	YBEGIN  reduce 9
	YCONST  reduce 9
	YFUNCTION  reduce 9
	YID  shift 27
	YLABEL  reduce 9
	YPROCEDURE  reduce 9
	YTYPE  reduce 9
	YVAR  reduce 9
	.  error


12: shift/reduce conflict (shift 30, red'n 10) on error
state 12
	decl :  type_decl_
	type_decl :  type_decl_YID = type ; 
	type_decl :  type_decl_error 

	error  shift 30
	YBEGIN  reduce 10
	YCONST  reduce 10
	YFUNCTION  reduce 10
	YID  shift 29
	YLABEL  reduce 10
	YPROCEDURE  reduce 10
	YTYPE  reduce 10
	YVAR  reduce 10
	.  error


13: shift/reduce conflict (shift 32, red'n 11) on error
state 13
	decl :  var_decl_
	var_decl :  var_decl_id_list : type ; 
	var_decl :  var_decl_error 

	error  shift 32
	YBEGIN  reduce 11
	YCONST  reduce 11
	YFUNCTION  reduce 11
	YID  shift 33
	YLABEL  reduce 11
	YPROCEDURE  reduce 11
	YTYPE  reduce 11
	YVAR  reduce 11
	.  error


state 14
	labels :  YLABEL_label_decl ; 

	YINT  shift 35
	.  error


state 15
	const_decl :  YCONST_YID = const ; 
	const_decl :  YCONST_error 

	error  shift 37
	YID  shift 36
	.  error


state 16
	type_decl :  YTYPE_YID = type ; 
	type_decl :  YTYPE_error 

	error  shift 39
	YID  shift 38
	.  error


state 17
	var_decl :  YVAR_id_list : type ; 
	var_decl :  YVAR_error 

	error  shift 41
	YID  shift 33
	.  error


state 18
	prog_hedr :  YPROG YID (_id_list ) ; 

	YID  shift 33
	.  error


state 19
	goal :  prog_hedr decls procs block_. 

	.  shift 43
	.  error


state 20
	procs :  procs proc_

	.  reduce 28


state 21
	block :  YBEGIN_stat_list YEND 

	error  shift 60
	YBEGIN  shift 51
	YCASE  shift 52
	YEND  reduce 93
	YFOR  shift 56
	YGOTO  shift 57
	YID  shift 49
	YIF  shift 58
	YINT  shift 47
	YREPEAT  shift 55
	YWHILE  shift 54
	YWITH  shift 53
	YASSERT  shift 59
	;  reduce 93
	.  error


state 22
	proc :  phead_YFORWARD ; 
	pheadres :  phead_

	YFORWARD  shift 66
	.  reduce 31


state 23
	proc :  pheadres_decls procs block ; 

	same as 2


state 24
	phead :  porf_YID params ftype ; 

	YID  shift 68
	.  error


state 25
	porf :  YPROCEDURE_

	.  reduce 33


state 26
	porf :  YFUNCTION_

	.  reduce 34


state 27
	const_decl :  const_decl YID_= const ; 

	=  shift 69
	.  error


state 28
	const_decl :  const_decl error_

	.  reduce 18


state 29
	type_decl :  type_decl YID_= type ; 

	=  shift 70
	.  error


state 30
	type_decl :  type_decl error_

	.  reduce 22


state 31
	var_decl :  var_decl id_list_: type ; 
	id_list :  id_list_, YID 

	,  shift 72
	:  shift 71
	.  error


state 32
	var_decl :  var_decl error_

	.  reduce 26


state 33
	id_list :  YID_

	.  reduce 173


state 34
	labels :  YLABEL label_decl_; 
	label_decl :  label_decl_, YINT 

	;  shift 73
	,  shift 74
	.  error


state 35
	label_decl :  YINT_

	.  reduce 13


state 36
	const_decl :  YCONST YID_= const ; 

	=  shift 75
	.  error


state 37
	const_decl :  YCONST error_

	.  reduce 17


state 38
	type_decl :  YTYPE YID_= type ; 

	=  shift 76
	.  error


state 39
	type_decl :  YTYPE error_

	.  reduce 21


state 40
	var_decl :  YVAR id_list_: type ; 
	id_list :  id_list_, YID 

	,  shift 72
	:  shift 77
	.  error


state 41
	var_decl :  YVAR error_

	.  reduce 25


state 42
	prog_hedr :  YPROG YID ( id_list_) ; 
	id_list :  id_list_, YID 

	)  shift 78
	,  shift 72
	.  error


state 43
	goal :  prog_hedr decls procs block ._

	.  reduce 1


state 44
	block :  YBEGIN stat_list_YEND 
	stat_lsth :  stat_list_; 

	YEND  shift 79
	;  shift 80
	.  error


state 45
	stat_list :  stat_

	.  reduce 83


state 46
	stat_list :  stat_lsth_stat 

	error  shift 60
	YBEGIN  shift 51
	YCASE  shift 52
	YEND  reduce 93
	YFOR  shift 56
	YGOTO  shift 57
	YID  shift 49
	YIF  shift 58
	YINT  shift 47
	YREPEAT  shift 55
	YUNTIL  reduce 93
	YWHILE  shift 54
	YWITH  shift 53
	YASSERT  shift 59
	;  reduce 93
	.  error


state 47
	stat :  YINT_: stat 

	:  shift 82
	.  error


state 48
	stat :  proc_id_
	stat :  proc_id_( wexpr_list ) 

	(  shift 83
	.  reduce 95


49: shift/reduce conflict (shift 84, red'n 182) on error
state 49
	stat :  YID_error 
	variable :  YID_
	array_id :  YID_
	ptr_id :  YID_
	record_id :  YID_
	proc_id :  YID_

	error  shift 84
	YELSE  reduce 182
	YEND  reduce 182
	YUNTIL  reduce 182
	.  reduce 180
	(  reduce 182
	;  reduce 182
	:  reduce 135
	^  reduce 179
	[  reduce 178
	.  error


state 50
	stat :  assign_

	.  reduce 98


state 51
	stat :  YBEGIN_stat_list YEND 

	same as 21


state 52
	stat :  YCASE_expr YOF cstat_list YEND 

	error  shift 87
	YID  shift 96
	YINT  shift 92
	YNOT  shift 99
	YNUMB  shift 94
	YNIL  shift 90
	YSTRING  shift 91
	YBINT  shift 93
	+  shift 88
	-  shift 89
	(  shift 98
	[  shift 100
	.  error


state 53
	stat :  YWITH_var_list YDO stat 

	YID  shift 103
	.  error


state 54
	stat :  YWHILE_expr YDO stat 

	same as 52


state 55
	stat :  YREPEAT_stat_list YUNTIL expr 

	same as 21


state 56
	stat :  YFOR_assign YTO expr YDO stat 
	stat :  YFOR_assign YDOWNTO expr YDO stat 

	YID  shift 103
	.  error


state 57
	stat :  YGOTO_YINT 

	YINT  shift 107
	.  error


state 58
	stat :  YIF_expr YTHEN stat 
	stat :  YIF_expr YTHEN stat YELSE stat 
	stat :  YIF_expr YTHEN stat YELSE 

	same as 52


state 59
	stat :  YASSERT_expr 

	same as 52


state 60
	stat :  error_

	.  reduce 111


state 61
	assign :  variable_: = expr 

	:  shift 110
	.  error


state 62
	variable :  qual_var_
	qual_var :  qual_var_[ expr_list ] 
	qual_var :  qual_var_. field_id 
	qual_var :  qual_var_^ 

	.  shift 112
	^  shift 113
	[  shift 111
	.  reduce 136


state 63
	qual_var :  array_id_[ expr_list ] 

	[  shift 114
	.  error


state 64
	qual_var :  record_id_. field_id 

	.  shift 115
	.  error


state 65
	qual_var :  ptr_id_^ 

	^  shift 116
	.  error


state 66
	proc :  phead YFORWARD_; 

	;  shift 117
	.  error


state 67
	decls :  decls_decl 
	decls :  decls_error 
	proc :  pheadres decls_procs block ; 

	error  shift 9
	YBEGIN  reduce 27
	YCONST  shift 15
	YFUNCTION  reduce 27
	YLABEL  shift 14
	YPROCEDURE  reduce 27
	YTYPE  shift 16
	YVAR  shift 17
	.  error


state 68
	phead :  porf YID_params ftype ; 

	(  shift 120
	.  reduce 36


state 69
	const_decl :  const_decl YID =_const ; 

	YID  shift 130
	YINT  shift 127
	YNUMB  shift 129
	YSTRING  shift 122
	YBINT  shift 128
	+  shift 124
	-  shift 125
	.  error


state 70
	type_decl :  type_decl YID =_type ; 

	YARRAY  shift 139
	YFILE  shift 140
	YID  shift 143
	YINT  shift 127
	YNUMB  shift 129
	YPACKED  shift 135
	YRECORD  shift 142
	YSET  shift 141
	YSTRING  shift 122
	YBINT  shift 128
	+  shift 124
	-  shift 125
	(  shift 137
	^  shift 133
	.  error


state 71
	var_decl :  var_decl id_list :_type ; 

	same as 70


state 72
	id_list :  id_list ,_YID 

	YID  shift 145
	.  error


state 73
	labels :  YLABEL label_decl ;_

	.  reduce 12


state 74
	label_decl :  label_decl ,_YINT 

	YINT  shift 146
	.  error


state 75
	const_decl :  YCONST YID =_const ; 

	same as 69


state 76
	type_decl :  YTYPE YID =_type ; 

	same as 70


state 77
	var_decl :  YVAR id_list :_type ; 

	same as 70


state 78
	prog_hedr :  YPROG YID ( id_list )_; 

	;  shift 150
	.  error


state 79
	block :  YBEGIN stat_list YEND_

	.  reduce 4


state 80
	stat_lsth :  stat_list ;_

	.  reduce 85


state 81
	stat_list :  stat_lsth stat_

	.  reduce 84


82: shift/reduce conflict (shift 60, red'n 93) on error
state 82
	stat :  YINT :_stat 

	same as 46


state 83
	stat :  proc_id (_wexpr_list ) 

	error  shift 87
	YID  shift 96
	YINT  shift 92
	YNOT  shift 99
	YNUMB  shift 94
	YNIL  shift 90
	YSTRING  shift 91
	YBINT  shift 93
	+  shift 88
	-  shift 89
	(  shift 98
	[  shift 100
	.  error


state 84
	stat :  YID error_

	.  reduce 97


state 85
	stat_lsth :  stat_list_; 
	stat :  YBEGIN stat_list_YEND 

	YEND  shift 155
	;  shift 80
	.  error


state 86
	stat :  YCASE expr_YOF cstat_list YEND 
	expr :  expr_relop expr 
	expr :  expr_addop expr 
	expr :  expr_divop expr 

	YAND  shift 172
	YDIV  shift 170
	YIN  shift 163
	YMOD  shift 171
	YOF  shift 156
	YOR  shift 166
	<  shift 161
	=  shift 160
	>  shift 162
	+  shift 164
	-  shift 165
	|  shift 167
	*  shift 168
	/  shift 169
	&  shift 173
	.  error


state 87
	expr :  error_

	.  reduce 113


state 88
	expr :  +_expr 

	same as 52


state 89
	expr :  -_expr 

	same as 52


state 90
	expr :  YNIL_

	.  reduce 119


state 91
	expr :  YSTRING_

	.  reduce 120


state 92
	expr :  YINT_

	.  reduce 121


state 93
	expr :  YBINT_

	.  reduce 122


state 94
	expr :  YNUMB_

	.  reduce 123


state 95
	expr :  variable_

	.  reduce 124


96: shift/reduce conflict (shift 176, red'n 135) on error
state 96
	expr :  YID_error 
	variable :  YID_
	array_id :  YID_
	ptr_id :  YID_
	record_id :  YID_
	func_id :  YID_

	error  shift 176
	YAND  reduce 135
	YDIV  reduce 135
	YDO  reduce 135
	YDOTDOT  reduce 135
	YTO  reduce 135
	YELSE  reduce 135
	YEND  reduce 135
	YIN  reduce 135
	YMOD  reduce 135
	YOF  reduce 135
	YOR  reduce 135
	YTHEN  reduce 135
	YDOWNTO  reduce 135
	YUNTIL  reduce 135
	YOCT  reduce 135
	YHEX  reduce 135
	<  reduce 135
	=  reduce 135
	>  reduce 135
	+  reduce 135
	-  reduce 135
	|  reduce 135
	*  reduce 135
	/  reduce 135
	&  reduce 135
	.  reduce 180
	(  reduce 183
	)  reduce 135
	;  reduce 135
	,  reduce 135
	:  reduce 135
	^  reduce 179
	[  reduce 178
	]  reduce 135
	.  error


state 97
	expr :  func_id_( wexpr_list ) 

	(  shift 177
	.  error


state 98
	expr :  (_expr ) 

	same as 52


state 99
	expr :  YNOT_expr 

	same as 52


state 100
	expr :  [_element_list ] 
	expr :  [_] 
